# urlshortener

./: Cargo.toml
src/: error.rs  id_provider.rs  main.rs  todo.txt
src/adapters/inmemory/: mod.rs
src/app/: mod.rs
src/app/command/: create_short_url.rs  mod.rs
src/app/query/: get_full_url.rs  mod.rs
src/di/: mod.rs
src/ports/httpapi/: mod.rs
